--- a/src/style/style.css
+++ b/src/style/style.css
@@ -43,7 +43,6 @@ li {
     background-position: center;
     mix-blend-mode: multiply;
     pointer-events: none;
-    transform-style: preserve-3d;
     z-index: 10;
 }
 main {
@@ -156,14 +155,13 @@ header li a:hover::after {
 
 @keyframes heads {
     from {
-        transform: rotate3D(-0.5, -0.5, -0.25, 5deg);
+        transform: rotateX(4deg);
     }
     50% {
         transform: rotateY(10deg);
     }
     to {
-        transform: rotate3D(0.5, 0.5, 0.25, -5deg);
-        /* transform: rotate3D(0.5, 0.5, 0.25, -5deg); */
+        transform: rotateX(-4deg);
     }
 }
 @keyframes geralt {
